# any-object-storage

./: .gitignore  Cargo.toml  README.md  tea.yaml
example/: Cargo.toml
src/: metadata.rs
