[package]
name = "any-object-storage"
version = "0.1.2"
edition = "2021"
description = "Any object storage libraries."
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/sigeshuo1/any-object-storage"
repository = "https://github.com/sigeshuo1/any-object-storage.git"

[workspace]
members = ["example"]

[dependencies]
reqwest = { version = "0.11.27", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
chrono = "0.4.37"
hmac = "0.12.1"
base64 = "0.21.7"
sha1 = "0.10.6"
urlencoding = "2.1.3"
tracing = { version = "0.1.40", optional = true }
tracing-subscriber = { version = "0.3.18", optional = true }
serde_json = "1.0.115"
thiserror = "1.0.58"
[features]
default = []
blocking = ["reqwest/blocking"]
debug-print = ["tracing", "tracing-subscriber"]
[dev-dependencies]
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
dotenvy = "0.15.7"
tokio = { version = "1.37.0", features = ["full"] }